<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.test.mvvm.ui.fillexamform.Form1ViewModel1" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout

            android:id="@+id/activityMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="7dp"
                app:cardElevation="22dp">

                <TextView
                    style="@style/TextStyle.Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="60dp"
                    android:text="@string/form_part1"
                    android:textAllCaps="true"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etName"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/name"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobile"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/mobile"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/gray"
                        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddress"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/input_border_bottom"
                            android:cursorVisible="true"
                            android:gravity="center|left|bottom"
                            android:hint="@string/address"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:paddingBottom="10dp"
                            android:textColor="@color/black_effective"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                   <!-- <Button
                        android:id="@+id/btnServerLogin"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:onClick="@{() -> viewModel.onServerLoginClick()}"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textSize="18dp" />-->

                    <Button
                        android:id="@+id/btnRegistration"
                        style="@style/Button.Red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        android:onClick="@{() -> viewModel.onRegistrationClick()}"
                        android:padding="10dp"
                        android:text="@string/next"
                        android:textSize="18dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>